--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="https://github.com/shubhamj190">shubhamj190</a>
                       </div>
                       <h4 id="summary">Summary</h4>
-                            <p>Netlify Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores explicabo nam similique quaerat, porro perferendis adipisci molestias eius dolore eaque, consequatur placeat voluptates consequuntur! Quis quia incidunt aut, repellat aspernatur placeat praesentium vel enim eaque, aperiam, in corrupti tenetur.</p>
+                            <p>I intend to be a part of an organization where i can constantly learn and develop my technical and management skills and make the best use of it for the growth of the organization. I look forward to establishing myself by adapting new technologies as well.</p>
                         </div>
                 </div>
         </section>
@@ -60,7 +60,10 @@
                             Jan 2019 - Feb 2020
                           </div>
                         </div> <!-- end job-title container -->
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum voluptate iure quasi inventore doloremque exercitationem maiores libero corrupti magnam praesentium voluptatem facere optio recusandae sit debitis tenetur beatae, voluptatibus itaque magni, est. Fugiat nostrum nemo fuga nulla modi doloremque maxime.</p>
+                        <p>Managed a wireless site survey project based in US and Canada where the end client was AMD inc. where I'm responsible for the end-to-end completion of the project!
+                        </p>
+                        <p>Gathering Human resource for a project of IP-phone installation in Europe in 8 different countries where I'm responsible for coordination of the client with the site team of Germany!</p>
+                        <p>Involves in many Hardware procurement projects of China, Dubai, Europe and South East Asia!</p>
                       </div>
                 </div>
             </div>
@@ -81,7 +84,9 @@
                             2014-2018
                           </div>
                         </div> <!-- end job-title container -->
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum voluptate iure quasi inventore doloremque exercitationem maiores libero corrupti magnam praesentium voluptatem facere optio recusandae sit debitis tenetur beatae, voluptatibus itaque magni, est. Fugiat nostrum nemo fuga nulla modi doloremque maxime.</p>
+                        <p>Graduated as a Computer Engineer in 2018 from Mumbai University </p>
+                        <p>Certificate of Completion in Networking and Security such as CCNA, CCNA security, CCNP ASA in 2019 </p>
+                        <p>Currently doing course regarding Web Development and Data Science/Machine Learning</p>
                       </div>
                 </div>
             </div>
@@ -103,7 +108,7 @@
                       <div class="col-lg-4 col-md-4 col-6 skill-set"><img src="./asset/flask.png" alt="flask" style="width: 50px;" class="img-wrapper"/></div>
                       <div class="col-lg-4 col-md-4 col-6 skill-set"><img src="./asset/data.png" alt="data science" style="width: 50px;" class="img-wrapper"/></div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, obcaecati aut quas et voluptatibus dolorem similique, voluptate, totam, corrupti placeat molestiae distinctio consectetur. Et dolorum, eos, expedita debitis sed explicabo.</p>
+                    <p>Above as the are skill-set that i've done or currently doing</p>
                     </div>
                 </div>
         </section>
@@ -138,21 +143,21 @@
                   <h4 class="exp">Referemces</h4>
               </div>
               <div class="col-lg-10 col-md-10 col-sm-12 ">
-                <div class="job-company">Some Guy, CEO</div>
-        <div class="job-title">Some Company Inc.</div>
+                <div class="job-company">Kaustubh Salvi, Solutions Team</div>
+        <div class="job-title">Rexus India Pvt Ltd</div>
         <div class="links">
           <div class="link-item">
             <div class="link-item"><img src="https://img.icons8.com/nolan/30/email.png"/>
-              <a href="mailto:shubhamjadhav190@gmail.com">shubhamjadhav190@gmail.com</a>
+              <a href="mailto:kaustubhpsalvi@gmail.com">kaustubhpsalvi@gmail.com</a>
             </div>
           </div>
           <div class="link-item">
             <img src="https://img.icons8.com/fluent/30/000000/phone-not-being-used.png"/>
-          <a href="tel:+91-800-745-4373">+91-800-745-4373</a>
+          <a href="tel:+91-992-063-7428">+91-992-063-7428</a>
         </div>
         </div> <!-- end links -->
 
-        <p class="reference-details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, quam. Earum suscipit aliquid eius nostrum iste reprehenderit nesciunt, ratione natus consectetur voluptatum magni, culpa in nihil veniam est quod dolorum sunt facere odio quibusdam corporis adipisci fugiat quasi, consequuntur. Debitis?</p>
+        <p class="reference-details"> Kaustubh is an experienced Solutions Consultant with a demonstrated history of leading multiple projects to completion, keeping in mind the financial and technical aspect. Skilled in Management, Pre-sales, Networking, Cisco Systems Products, and Technical Support</p>
 
         <div class="reference">More references available upon request.</div>
           </div>
